@@ -1,3 +1,3 @@
 module ContactUs
-  VERSION = "0.4.0.beta"
+  VERSION = "0.4.4.beta"
 end
